# vapaee-smart-contracts

./: .gitconfig  .gitignore  .gitmodules  README.md  pytest.ini
.github/workflows/: main.yaml
contracts/: makefile  manifest.toml
contracts/_koinonospool_1st_prototype/: errors.hpp  koinonospool.cpp  utils.hpp
contracts/acorntwitter/: acorntwitter.cpp  acorntwitter.hpp
contracts/basictoken/: basictoken.cpp  basictoken.hpp
contracts/boardgamebox/: makefile
contracts/cardsntokens/: makefile
contracts/categorizers/: makefile
contracts/echocontract/: CMakeLists.txt  echocontract.cpp  echocontract.hpp
contracts/eventhandler/: CMakeLists.txt  eventhandler.hpp  makefile
contracts/eventtracker/: CMakeLists.txt  eventtracker.cpp  eventtracker.hpp
contracts/koinonospool/: CMakeLists.txt  errors.hpp  koinonospool.cpp  koinonospool.hpp  utils.hpp
contracts/localstrings/: makefile
contracts/nftcontainer/: nftcontainer.cpp  nftcontainer.hpp
contracts/pruebavapaee/: pruebavapaee.cpp  pruebavapaee.hpp
contracts/telos.decide/: CMakeLists.txt
contracts/telosbookdex/: CMakeLists.txt  makefile  telosbookdex.cpp  telosbookdex.hpp
contracts/telosmaindex/: CMakeLists.txt  telosmaindex.cpp  telosmaindex.hpp
contracts/telospooldex/: CMakeLists.txt  telospooldex.cpp  telospooldex.hpp
contracts/telosprofile/: CMakeLists.txt  telosprofile.cpp  telosprofile.hpp
contracts/teloswrapper/: CMakeLists.txt  teloswrapper.cpp  teloswrapper.hpp
contracts/testcontract/: testcontract.cpp  testcontract.hpp
contracts/vapaeeauthor/: makefile
contracts/vapaeepayhub/: vapaeepayhub.cpp  vapaeepayhub.hpp
contracts/vapaeestyles/: makefile
contracts/vapaeetokens/: makefile  vapaeetokens.cpp  vapaeetokens.hpp
docker/: README.md  entrypoint.sh  run.sh
docker/scripts/: _lib.sh  accounts.sh  compile.sh  deploy.sh  init.sh  loaddata.sh
docker/vtestnet/: Dockerfile  entrypoint.sh
docker/vtestnet-eosio.interactive/: entrypoint.sh
docs/: hemptracker-whitepaper-draft.md  openpool-proto.md  recovered_tokens_regisrations.txt
docs/whitepaper/: document.tex
meets/: meeting-03-11-2020  meeting-03-11-2020.md  meeting-07-11-2020.md  meeting-08-01-2021.md  meeting-20-11-2020.EN.md  meeting-20-11-2020.ES.md  meeting-26-11-2020.md
scripts/: ck.py
tests/: README.md  conftest.py  test_utils.py
tests/eventtracker/: constants.py  test_addevent.py  test_addmap.py  test_addseason.py  test_addtarget.py  test_addtcwlist.py  test_addwlist.py
tests/koinonospool/: constants.py  test_initpool.py
tests/telosbookdex/: constants.py  test_addtoken.py  test_fake_deposit.py  test_history.py  test_market_ids.py  test_math.py  test_order.py
tests/telospooldex/: constants.py  test_convert.py  test_funding.py  test_participation.py
(+270 files in other folders)
